[metadata]
name = kksubs
version = 2.4.1

[options]
include_package_data = True
install_requires =
    numpy
    opencv-python
    packaging
    pillow
    pyyaml

[options.entry_points]
console_scripts = 
    kkp = kkp.cmd.project:command_line
    kksubs = kksubs.cmd.subtitle:command_line

[options.packages.find]
exclude = 
    test*